--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cot-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/cotapp",
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "fetch": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0"
